[package]
name = "scrap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
select = "*"
scraper = "*"
futures = "0.3"
soup = "*"
tokio = { version = "*", features = ["full"] }
serde =  { version = "*", features = ["derive"] }
serde_json = "1.0"
mysql = "*"